Cleaning + fixed dark mode on guestbook

--- a/public/css/not-found.css
+++ b/public/css/not-found.css
@@ -12,5 +12,5 @@ img {
 }
 
 img:hover {
-    cursor: url(../cursors/pointer.png), pointer;
+    cursor: url(/cursors/pointer.png), pointer;
 }
